Content validation and compatibility, NPC presentation quality, Memory tools, Administration and debugging, Extension API completion